# NewLang

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  basecompiler.cc  baselang.l  baselang.tab.c  baselang.tab.h  baselang.y  baserepl.cc  configure.ac  info.mdk.json  toolkit.pyx
.devcontainer/: devcontainer.json
.editor/: info.json
.editor/vscode/: CHANGELOG.md  README.md  keybindings.json  language-configuration.json  package-lock.json  package.json  vsc-extension-quickstart.md
.editor/vscode/syntaxes/: newlang.tmLanguage.json
autom4te.cache/: output.0  requests  traces.0
docs/: Index.md
example/: helloworld.new  listfiles.new
newlang-compiler/: README.md
newlang-compiler/docs/: specification.md
newlang-compiler/src/: main.newlang
newlang-compiler/src/codegen/: codegen.newlang
newlang-compiler/src/lexer/: lexer.newlang
newlang-compiler/src/parser/: parser.newlang
newlang-compiler/src/utils/: utils.newlang
newlang-compiler/tests/: lexer_tests.newlang
py3/: setup.py
